<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/gradient_bg">
	<LinearLayout
		android:id="@+id/linear5"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingTop="72dp"
		android:paddingBottom="36dp"
		android:orientation="vertical"
		android:paddingHorizontal="28dp">
		<TextView
			android:id="@+id/textview4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:textSize="44sp"
			android:fontFamily="sans-serif-black"
			android:letterSpacing="-0.03"
			android:includeFontPadding="false" />
		<TextView
			android:id="@+id/textview5"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/welcome_tagline"
			android:textSize="16sp"
			android:lineSpacingExtra="4dp"
			android:fontFamily="sans-serif" />
		<View
			android:id="@+id/view6"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />
		<Button
			android:id="@+id/btnContinue"
			android:layout_width="match_parent"
			android:layout_height="52dp"
			android:background="@drawable/btn_primary_rounded"
			android:text="@string/welcome_open_project"
			android:textSize="15sp"
			android:textAllCaps="false"
			android:fontFamily="sans-serif-medium"
			android:stateListAnimator="@null" />
		<TextView
			android:id="@+id/textview6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="28dp"
			android:text="@string/welcome_version"
			android:textSize="12sp"
			android:layout_gravity="center_horizontal"
			android:fontFamily="monospace" />
	</LinearLayout>
	<View
		android:id="@+id/view4"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/bg_welcome_grid"
		android:alpha="0.35" />
</FrameLayout>
